# python_fma

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  release.yml
cmake/: test_exception_round_support.h.in
cmake/try_compile/: check_fe_divbyzero.c  check_fe_downward.c  check_fe_inexact.c  check_fe_invalid.c  check_fe_overflow.c  check_fe_tonearest.c  check_fe_towardzero.c  check_fe_underflow.c  check_fe_upward.c
csrc/: CMakeLists.txt  fma_config.h  fma_module.c  fma_module.h
src/python_fma/: __init__.py  _binding.py
tests/: helpers.py  test_exception_hierarchy.py  test_fma_basic.py  test_fma_exceptions.py  test_fma_rounding.py  test_query_functions.py  test_subnormal_rounding.py
