[build-system]
requires = ["scikit-build-core>=0.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "python-fma"
version = "0.1.0"
description = "FMA binding module with 32-bit float support and configurable rounding modes"
requires-python = ">=3.10"

[tool.scikit-build]
wheel.packages = ["src/python_fma"]
cmake.build-type = "ReWithDebInfo"
wheel.py-api = "py3"

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["UP006", "UP007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"